--- a/index.html
+++ b/index.html
@@ -1,48 +1,78 @@
 <html>
 <head>
     <title>Myself</title>
-    <link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
     </head>
 <body>
+    <div class="container">
     <header>
     <h1>About myself</h1>
     </header>
+        <div class="row">
     <div class="whoiam">
-    <h3>who i am</h3>
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
+    <h3>Who i am</h3>
     <p>    
     My name is Nathaniel.
         I live in kileleshwa.
         I go to aga khan academy junior school.
         I am 10 years old.
-        </p>
+     </p>
     </div>
+        <div class="col-md-3"></div>
+   </div>
+  </div>
+        <div class="row">
         <div class="whatmyselflikes">
-        <h3>what myself likes</h3>
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
+        <h3>What myself likes</h3>
         <p>
         I am kenyan
         I have no pets
         My hobies are eating and swimming
         My favourite fruit is mango.
-            </p>
+      </p>
+     </div>
+        <div class="col-md-2"></div>
     </div>
-          <div class="whoiloveandwholovesmyself">  
-        <h3>who i love and who loves myself </h3>
+   </div>
+        <div class="row">
+          <div class="whoiloveandwholovesmyself">
+              <div class="col-md-1"></div>
+              <div class="col-md-10">
+        <h3>Who i love and who loves myself </h3>
         <p>
         I love my family
         my mom and dad wok alot.
         Me and my brothers play alot.
         My family loves me alot.
-              </p>
+      </p>
+     </div>
+    <div class="col-md-1"></div>
     </div>
-          <div class="whoaregoodtomyself">  
-        <h3>who are good to myself</h3>
+   </div>
+        <div class="row">
+          <div class="whoaregoodtomyself">
+              <div class="col-md-3"></div>
+              <div class="col-md-6"> 
+        <h3>Who are good to myself</h3>
         <p>
     i am a very good boy.
         My brothers are my best friend.
         My brothers are good.
         My dad and mom are very good.
         I like to play computer games.
-            </p>
+          </p>
+         </div>
+              <div class="col-md-3"></div>
         </div>
-    </body>
-</html>
+       </div>
+      </div>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/jquery-3.5.1.min.js"></script>
+    <script src="assets/js/popper.min.js"></script>
+     </body>
+    </html>
